docs(api): update api docs and swagger files
