# api/remote.go
@@ -9,6 +9,14 @@ import (
 	log "github.com/sirupsen/logrus"
 )
 
+// This syncs beasts local challenges database with the remote git repository(hack)
+// @Summary Syncs beast's local copy of remote git repository for challenges.
+// @Description Syncs beasts local challenges database with the remote git repository(hack) the local copy of the challenge database is located at $HOME/.beast/remote/$REMOTE_NAME.
+// @Accept  json
+// @Produce application/json
+// @Success 200 {JSON} Success
+// @Failure 500 {JSON} InternalServerError
+// @Router /api/remote/sync/ [post]
 func syncBeastGitRemote(c *gin.Context) {
 	err := git.SyncBeastRemote()
 	if err != nil {
@@ -24,6 +32,14 @@ func syncBeastGitRemote(c *gin.Context) {
 	})
 }
 
+// This resets beast git remote directory located in ~/.beast/remote/$REMOTE_NAME
+// @Summary Resets beast local copy of remote git repository.
+// @Description Resets local copy of remote git directory, it first deletes the existing directory and then clone from the remote again.
+// @Accept  json
+// @Produce application/json
+// @Success 200 {JSON} Success
+// @Failure 500 {JSON} InternalServerError
+// @Router /api/remote/reset/ [post]
 func resetBeastGitRemote(c *gin.Context) {
 	err := git.ResetBeastRemote()
 	if err != nil {
